# Learning_OpenGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: application.hpp  camera.hpp  graphics_types.hpp  imgui_handler.hpp  light.hpp  mesh.hpp  model.hpp  transform.hpp  utils.hpp
app/assets/: imgui.ini
app/assets/models/concept-retro-pc/: model.fbx
app/assets/shaders/: basic.frag  basic.vert  gouraud.frag  gouraud.vert  light.frag  light.vert  phong.frag  phong.vert
app/src/: application.cpp  graphics_types.cpp  imgui_handler.cpp  light.cpp  mesh.cpp  model.cpp  utils.cpp
dependencies/glad/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
